se implementa porcentaje en general colors

--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -120,29 +120,29 @@
                 <div class="item2-2-img">
                     <h3>Exterior</h3>
                     <img src="../../../../assets/productos/exterior.png" alt="Silueta Mujer" class="imgPrendas">
-                    <p>50</p>
-                    <p>50%</p>
+                    <p>{{exterior}}</p>
+                    <p>{{exteriorPorcentage}}%</p>
                     <div class="colorx mb-3"></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Interior</h3>
                     <img src="../../../../assets/productos/interior.png" alt="Silueta Mujer" class="imgPrendas">
-                    <p>50</p>
-                    <p>50%</p>
+                    <p>{{interior}}</p>
+                    <p>{{interiorPorcentage}}%</p>
                     <div class="colorx mb-3"></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Calzado</h3>
                     <img src="../../../../assets/productos/calzado.png" alt="Silueta Mujer" class="imgPrendas">
-                    <p>50</p>
-                    <p>50%</p>
+                    <p>{{calzado}}</p>
+                    <p>{{calzadoPorcentage}}%</p>
                     <div class="colorx mb-3"></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Accesorios</h3>
                     <img src="../../../../assets/productos/accesorios.png" alt="Silueta Mujer" class="imgPrendas">
-                    <p>50</p>
-                    <p>50%</p>
+                    <p>{{accesorios}}</p>
+                    <p>{{accesoriosPorcentage}}%</p>
                     <div class="colorx mb-3"></div>
                 </div>
             </div>
@@ -356,134 +356,71 @@
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">85</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Blanco</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/exterior.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">75</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Negro</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/interior.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">80</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Amarillo</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/accesorios.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">60</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Cafe</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/calzado.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">85</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Blanco</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/exterior.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">75</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Negro</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/interior.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">80</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Amarillo</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/accesorios.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">60</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Cafe</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/calzado.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">85</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Blanco</td>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
                     </tr>
                     <tr>
                         <td data-label="Tipo"><img src="../../../../assets/productos/exterior.png" alt=""
                                 class="imgPrendasTabla" /></td>
                         <td data-label="Total SKU">75</td>
                         <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Negro</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/interior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">80</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Amarillo</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/accesorios.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">60</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Cafe</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/calzado.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">85</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Blanco</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/exterior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">75</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Negro</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/interior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">80</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Amarillo</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/accesorios.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">60</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Cafe</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/calzado.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">85</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Blanco</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/exterior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">75</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Negro</td>
-                    </tr>
-                    <tr>
-                        <td data-label="Tipo"><img src="../../../../assets/productos/interior.png" alt=""
-                                class="imgPrendasTabla" /></td>
-                        <td data-label="Total SKU">80</td>
-                        <td data-label="%">60%</td>
-                        <td data-label="Color TOP">Amarillo</td>
-                    </tr>
+                        <td data-label="Color TOP"><div class="colorx mb-3"></div></td>
+                    </tr>                    
                 </tbody>
             </table>
         </div>
