--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -2,21 +2,6 @@
   height: 250px;
 }
 
-.filtersCharts {
-  display: flex;
-  width: 100%;
-}
-
-.filterTable {
-  display: flex;
-  width: auto;
-}
-
-.filterSvgCharts, .filterSvgTable {
-  margin-left: 20px;
-  margin-top: -10px;
-}
-
 .hoverSvgFilter:hover {
   cursor: pointer;
 }
@@ -25,6 +10,22 @@
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 20px;
+}
+
+.titulo-chart {
+  text-align: center;
+}
+
+.marginTitle {
+  margin-top: -20px;
+}
+
+.marginCharts {
+  margin-top: -20px;
+}
+
+.marginTable {
+  margin-top: -10px;
 }
 
 .content-filter-item {
@@ -100,34 +101,42 @@
   /* Fin Tablas */
 
   /* inicio estilos chart */
-
   .chart-container {
     width: 100%;
   }
   
   .chart-line {
-    width: 90%;
+    width: 95%;
   }
-  
-  .titulo-chart {
-    text-align: center;
-  }
-
   /* fin chart */
 
-  /* grid para poner las cosas en una sola fila */
-
+  /* Grids */
   .grid {
     display: grid;
     grid-template-columns: 50% 50%;
   }
 
+  .gridFiltersCharts {
+    display: grid;
+    grid-template-columns: 90% 10%;
+  }
 
+  .gridFiltersTable {
+    display: grid;
+    grid-template-columns: 90% 10%;
+  }
 
   /* media queryes */
-
   @media (max-width: 1000px) {
     .grid {
+      display: block;
+    }
+
+    .gridFiltersCharts {
+      display: block;
+    }
+  
+    .gridFiltersTable {
       display: block;
     }
   }
