--- a/src/app/components/informe-categoria/informe-categoria.component.html
+++ b/src/app/components/informe-categoria/informe-categoria.component.html
@@ -215,7 +215,8 @@
                   <div class="overflow-auto container-scroll">
                     <li *ngFor="let composicion of composicionData">
                       <label class="control control--checkbox">
-                        <input class="composicionCards" type="checkbox" value="{{composicion.value}}" name="{{composicion.value}}"
+                        <input class="composicionCards" type="checkbox" value="{{composicion.value}}"
+                          name="{{composicion.value}}"
                           (change)="validateCheckFilter($event.target.checked, composicion, $event.target.className, $event.target)"
                           id="{{composicion.value}}" />
                         {{composicion.text}}
@@ -254,7 +255,7 @@
                         <img src="../../../../assets/mujer.png" alt="Silueta Mujer" class="float-left imgCards">
                       </div>
                       <div class="media-body text-left">
-                        <h3>Mujeres</h3>
+                        <h2>Mujeres</h2>
                         <p>Nuevos: {{womenNew}}</p>
                         <p>Descontinuados: {{womendiscontinued}}</p>
                         <p>Promoción: {{womenPromotion}}</p>
@@ -280,7 +281,7 @@
                         <img src="../../../../assets/hombre.png" alt="Silueta Hombre" class="float-left imgCards">
                       </div>
                       <div class="media-body text-left">
-                        <h3>Hombres</h3>
+                        <h2>Hombres</h2>
                         <p>Nuevos: {{menNew}}</p>
                         <p>Descontinuados: {{mendiscontinued}}</p>
                         <p>Promoción: {{menPromotion}}</p>
@@ -306,7 +307,7 @@
                         <img src="../../../../assets/kids.png" alt="Silueta Kids" class="float-left imgCards">
                       </div>
                       <div class="media-body text-left ml-4">
-                        <h3>Kids</h3>
+                        <h2>Kids</h2>
                         <p>Nuevos: {{kidsNew}}</p>
                         <p>Descontinuados: {{kidsdiscontinued}}</p>
                         <p>Promoción: {{kidsPromotion}}</p>
@@ -330,172 +331,181 @@
 
       <!-- tabla tipo de prenda -->
       <div class="filterTable">
-        <h2>Tipo de prenda</h2>
-        <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
-          xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
-          viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
-          aria-label="Illustration of a Funnel" class="filterSvgTable hoverSvgFilter ml-3">
-          <g id="__id33_ssutzzo1g">
-            <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
-              style="fill: inherit"></path>
-          </g>
-        </svg>
-        <br>
-        <ng-template #template>
-          <div class="modal-header">
-            <h4 class="modal-title pull-left">Filtros</h4>
-            <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <ul class="list-unstyled components">
+        <div>
+          <h2>Tipo de prenda</h2>
+        </div>
 
-              <li class="active">
-                <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Marca
-                </a>
-                <ul class="collapse list-unstyled" id="filterMArk">
+        <div>
+          <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
+            xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
+            viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
+            aria-label="Illustration of a Funnel" class="hoverSvgFilter">
+            <g id="__id33_ssutzzo1g">
+              <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
+                style="fill: inherit"></path>
+            </g>
+          </svg>
+          <br>
+          <ng-template #template>
+            <div class="modal-header">
+              <h4 class="modal-title pull-left">Filtros</h4>
+              <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal()">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <ul class="list-unstyled components">
 
-                  <li *ngFor="let origin of originData">
-                    <label class="control control--checkbox">
-                      <input class="marca" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
-                        (change)="validateCheckFilter($event.target.checked, origin, $event.target.className, $event.target)"
-                        id="{{origin.value}}" />
-                      {{origin.text}}
-                    </label>
-                  </li>
-                </ul>
-              </li>
+                <li class="active">
+                  <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
+                    class="dropdown-toggle menu-color">Marca
+                  </a>
+                  <ul class="collapse list-unstyled" id="filterMArk">
 
-              <li class="active mt-2">
-                <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Categoria
-                </a>
-                <ul class="collapse list-unstyled" id="filterCategory">
-                  <li *ngFor="let category of categoryData">
-                    <label class="control control--checkbox">
-                      <input class="categoria" type="checkbox" value="{{category.value}}" name="{{category.value}}"
-                        (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
-                        id="{{category.value}}" />
-                      {{category.text}}
-                    </label>
-                  </li>
-                </ul>
-              </li>
-
-              <li class="active mt-2">
-                <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Sub categoría
-                </a>
-                <ul class="collapse list-unstyled" id="filterSubCategory">
-                  <li *ngFor="let subcategory of subCategoryData">
-                    <label class="control control--checkbox">
-
-                      <input class="subCategoria" type="checkbox" value="{{subcategory.value}}"
-                        name="{{subcategory.value}}"
-                        (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
-                        id="{{subcategory.value}}" />
-                      {{subcategory.text}}
-                    </label>
-                  </li>
-                </ul>
-              </li>
-
-              <li class="active mt-2">
-                <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Tipo de prenda
-                </a>
-                <ul class="collapse list-unstyled" id="filterTipoPrenda">
-                  <div class="overflow-auto container-scroll">
-                    <li *ngFor="let tipoprenda of tipoPrendaData">
+                    <li *ngFor="let origin of originData">
                       <label class="control control--checkbox">
-                        <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}"
-                          name="{{tipoprenda.value}}"
-                          (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
-                          id="{{tipoprenda.value}}" />
-                        {{tipoprenda.text}}
+                        <input class="marca" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                          (change)="validateCheckFilter($event.target.checked, origin, $event.target.className, $event.target)"
+                          id="{{origin.value}}" />
+                        {{origin.text}}
                       </label>
                     </li>
-                  </div>
-                </ul>
-              </li>
+                  </ul>
+                </li>
 
-              <li class="active mt-2">
-                <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Color
-                </a>
-                <ul class="collapse list-unstyled" id="filterColor">
-                  <div class="overflow-auto container-scroll">
-                    <li *ngFor="let colores of colorData">
+                <li class="active mt-2">
+                  <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
+                    class="dropdown-toggle menu-color">Categoria
+                  </a>
+                  <ul class="collapse list-unstyled" id="filterCategory">
+                    <li *ngFor="let category of categoryData">
                       <label class="control control--checkbox">
-                        <input class="color" type="checkbox" value="{{colores.value}}" name="{{colores.value}}"
-                          (change)="validateCheckFilter($event.target.checked, colores, $event.target.className, $event.target)"
-                          id="{{colores.value}}" />
-                        {{colores.text}}
+                        <input class="categoria" type="checkbox" value="{{category.value}}" name="{{category.value}}"
+                          (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
+                          id="{{category.value}}" />
+                        {{category.text}}
                       </label>
                     </li>
-                  </div>
-                </ul>
-              </li>
+                  </ul>
+                </li>
 
-              <li class="active mt-2">
-                <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
-                  class="dropdown-toggle menu-color">Composición
-                </a>
-                <ul class="collapse list-unstyled" id="filterComposicion">
-                  <div class="overflow-auto container-scroll">
-                    <li *ngFor="let composicion of composicionData">
+                <li class="active mt-2">
+                  <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
+                    class="dropdown-toggle menu-color">Sub categoría
+                  </a>
+                  <ul class="collapse list-unstyled" id="filterSubCategory">
+                    <li *ngFor="let subcategory of subCategoryData">
                       <label class="control control--checkbox">
-                        <input class="composicion" type="checkbox" value="{{composicion.value}}" name="{{composicion.value}}"
-                          (change)="validateCheckFilter($event.target.checked, composicion, $event.target.className, $event.target)"
-                          id="{{composicion.value}}" />
-                        {{composicion.text}}
+
+                        <input class="subCategoria" type="checkbox" value="{{subcategory.value}}"
+                          name="{{subcategory.value}}"
+                          (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
+                          id="{{subcategory.value}}" />
+                        {{subcategory.text}}
                       </label>
                     </li>
-                  </div>
-                </ul>
-              </li>
+                  </ul>
+                </li>
 
-            </ul>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
-            <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
-          </div>
-        </ng-template>
+                <li class="active mt-2">
+                  <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
+                    class="dropdown-toggle menu-color">Tipo de prenda
+                  </a>
+                  <ul class="collapse list-unstyled" id="filterTipoPrenda">
+                    <div class="overflow-auto container-scroll">
+                      <li *ngFor="let tipoprenda of tipoPrendaData">
+                        <label class="control control--checkbox">
+                          <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}"
+                            name="{{tipoprenda.value}}"
+                            (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
+                            id="{{tipoprenda.value}}" />
+                          {{tipoprenda.text}}
+                        </label>
+                      </li>
+                    </div>
+                  </ul>
+                </li>
+
+                <li class="active mt-2">
+                  <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
+                    class="dropdown-toggle menu-color">Color
+                  </a>
+                  <ul class="collapse list-unstyled" id="filterColor">
+                    <div class="overflow-auto container-scroll">
+                      <li *ngFor="let colores of colorData">
+                        <label class="control control--checkbox">
+                          <input class="color" type="checkbox" value="{{colores.value}}" name="{{colores.value}}"
+                            (change)="validateCheckFilter($event.target.checked, colores, $event.target.className, $event.target)"
+                            id="{{colores.value}}" />
+                          {{colores.text}}
+                        </label>
+                      </li>
+                    </div>
+                  </ul>
+                </li>
+
+                <li class="active mt-2">
+                  <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
+                    class="dropdown-toggle menu-color">Composición
+                  </a>
+                  <ul class="collapse list-unstyled" id="filterComposicion">
+                    <div class="overflow-auto container-scroll">
+                      <li *ngFor="let composicion of composicionData">
+                        <label class="control control--checkbox">
+                          <input class="composicion" type="checkbox" value="{{composicion.value}}"
+                            name="{{composicion.value}}"
+                            (change)="validateCheckFilter($event.target.checked, composicion, $event.target.className, $event.target)"
+                            id="{{composicion.value}}" />
+                          {{composicion.text}}
+                        </label>
+                      </li>
+                    </div>
+                  </ul>
+                </li>
+
+              </ul>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-danger" (click)="clearFilters()">Limpiar filtros</button>
+              <button type="button" class="btn btn-primary" (click)="closeModal()">Cerrar</button>
+            </div>
+          </ng-template>
+        </div>
       </div>
       <div class="item-filters-top">
-        <div *ngFor="let filter of selectedFilter" class="content-filter-item">
+        <div *ngFor="let filter of selectedFilter" class="content-filter-item itemsMargin">
           <p class="item-filter">{{filter.item}}</p>
         </div>
       </div>
-      <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped row-border hover">
-        <thead>
-          <tr>
-            <th>Categoría</th>
-            <th>Subcategoría</th>
-            <th>Tipo de prenda</th>
-            <th>SKU</th>
-            <th>Precio promedio</th>
-            <th>Nueva llegada</th>
-            <th>Tasa de frescura</th>
-            <th>Descuento promedio</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let e of photos">
-            <td data-label="Categoría"> {{e.categoria}} </td>
-            <td data-label="Subcategoría"> {{e.subCategoria}} </td>
-            <td data-label="Tipo de prenda"> {{e.tipoPrenda}} </td>
-            <td data-label="SKU"> {{tableAvgSKU}} </td>
-            <td data-label="Precio promedio"> {{averagePrice}} </td>
-            <td data-label="Nueva llegada"> {{averageNews2}} </td>
-            <td data-label="Tasa de frescura"> {{tasaFrescura}} </td>
-            <td data-label="Descuento promedio"> {{averageDiscount2}} </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="tableContainer">
+        <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger"
+          class="table table-striped row-border hover marginTable">
+          <thead>
+            <tr>
+              <th>Categoría</th>
+              <th>Subcategoría</th>
+              <th>Tipo de prenda</th>
+              <th>SKU</th>
+              <th>Precio promedio</th>
+              <th>Nueva llegada</th>
+              <th>Tasa de frescura</th>
+              <th>Descuento promedio</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let e of photos">
+              <td data-label="Categoría"> {{e.categoria}} </td>
+              <td data-label="Subcategoría"> {{e.subCategoria}} </td>
+              <td data-label="Tipo de prenda"> {{e.tipoPrenda}} </td>
+              <td data-label="SKU"> {{tableAvgSKU}} </td>
+              <td data-label="Precio promedio"> {{averagePrice}} </td>
+              <td data-label="Nueva llegada"> {{averageNews2}} </td>
+              <td data-label="Tasa de frescura"> {{tasaFrescura}} </td>
+              <td data-label="Descuento promedio"> {{averageDiscount2}} </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
       <!-- Fin tabla tipo de prenda -->
 
       <br>
