--- a/src/app/components/informes/informe-precio/informe-precio.component.css
+++ b/src/app/components/informes/informe-precio/informe-precio.component.css
@@ -150,5 +150,20 @@ tr:hover td {
 @media (max-width: 1000px) {
   .grid-informs {
     display: block;
+    margin-top: 10%;
+  }
+}
+
+@media (max-width: 900px) {
+  .grid-informs {
+    display: block;
+    margin-top: 20%;
+  }
+}
+
+@media (max-width: 830px) {
+  .grid-informs {
+    display: block;
+    margin-top: 30%;
   }
 }
