--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.css
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.css
@@ -2,18 +2,15 @@
   height: 250px;
 }
 
-.filtersCharts {
-  display: flex;
-  width: 100%;
+.marginTitle {
+  margin-top: -20px;
 }
 
-.filterTable {
-  display: flex;
-  width: auto;
+.marginCharts {
+  margin-top: -20px;
 }
 
-.filterSvgCharts, .filterSvgTable {
-  margin-left: 20px;
+.marginTable {
   margin-top: -10px;
 }
 
@@ -81,7 +78,7 @@
   }
   
   .chart-line {
-    width: 90%;
+    width: 95%;
   }
   
   .titulo-chart {
@@ -90,19 +87,33 @@
 
   /* fin chart */
 
-  /* grid para poner las cosas en una sola fila */
-
+  /* Grids */
   .grid {
     display: grid;
     grid-template-columns: 50% 50%;
   }
 
+  .gridFiltersCharts {
+    display: grid;
+    grid-template-columns: 90% 10%;
+  }
 
+  .gridFiltersTable {
+    display: grid;
+    grid-template-columns: 90% 10%;
+  }
 
   /* media queryes */
-
   @media (max-width: 1000px) {
     .grid {
+      display: block;
+    }
+
+    .gridFiltersCharts {
+      display: block;
+    }
+  
+    .gridFiltersTable {
       display: block;
     }
   }
