--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -119,28 +119,28 @@
             <div class="item1-2-content items">
                 <div class="item2-2-img">
                     <h3>Exterior</h3>
-                    <img src="../../../../assets/productos/exterior.png" alt="Silueta Mujer" class="imgPrendas">
+                    <img src="../../../../assets/productos/exterior.png" alt="Silueta Mujer" class="imgPrendas" title="Exterior">
                     <p>{{exterior}}</p>
                     <p>{{exteriorPorcentage}}%</p>
                     <div class="colorx mb-3"></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Interior</h3>
-                    <img src="../../../../assets/productos/interior.png" alt="Silueta Mujer" class="imgPrendas">
+                    <img src="../../../../assets/productos/interior.png" alt="Silueta Mujer" class="imgPrendas" title="Interior">
                     <p>{{interior}}</p>
                     <p>{{interiorPorcentage}}%</p>
                     <div class="colorx mb-3"></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Calzado</h3>
-                    <img src="../../../../assets/productos/calzado.png" alt="Silueta Mujer" class="imgPrendas">
+                    <img src="../../../../assets/productos/calzado.png" alt="Silueta Mujer" class="imgPrendas" title="Calzado">
                     <p>{{calzado}}</p>
                     <p>{{calzadoPorcentage}}%</p>
                     <div class="colorx mb-3"></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Accesorios</h3>
-                    <img src="../../../../assets/productos/accesorios.png" alt="Silueta Mujer" class="imgPrendas">
+                    <img src="../../../../assets/productos/accesorios.png" alt="Silueta Mujer" class="imgPrendas" title="Accesorios">
                     <p>{{accesorios}}</p>
                     <p>{{accesoriosPorcentage}}%</p>
                     <div class="colorx mb-3"></div>
