--- a/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
+++ b/src/app/components/informes/informe-descontinuados/informe-descontinuados.component.html
@@ -7,7 +7,7 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="17" heigth="17"
         xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
         viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
-        aria-label="Illustration of a Funnel" class="hoverSvgFilter">
+        aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
         <g id="__id33_ssutzzo1g">
           <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
             style="fill: inherit"></path>
@@ -160,7 +160,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="17" heigth="17"
           xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
           viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
-          aria-label="Illustration of a Funnel" class="filterSvgCharts hoverSvgFilter ml-3">
+          aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
           <g id="__id33_ssutzzo1g">
             <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
               style="fill: inherit"></path>
@@ -293,8 +293,8 @@
       </div>
     </div>
     <div class="item-filters-top marginTitle">
-      <div *ngFor="let filter2 of selectedFilter2" class="content-filter-item">
-        <p class="item-filter">{{filter2.item}}</p>
+      <div class="content-filter-item">
+        <p class="item-filter"></p>
       </div>
     </div>
 
