--- a/src/app/components/informes/informe-descuento/informe-descuento.component.css
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.css
@@ -2,16 +2,6 @@
   height: 250px;
 }
 
-.hoverSvgFilter:hover {
-  cursor: pointer;
-}
-
-.item-filters-top {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 20px;
-}
-
 .titulo-chart {
   text-align: center;
 }
@@ -26,6 +16,16 @@
 
 .marginTable {
   margin-top: -10px;
+}
+
+.hoverSvgFilter:hover {
+  cursor: pointer;
+}
+
+.item-filters-top {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
 .content-filter-item {
@@ -126,21 +126,47 @@
     grid-template-columns: 90% 10%;
   }
 
-  /* media queryes */
   @media (max-width: 1000px) {
     .grid {
       display: block;
+      margin-top: 10%;
     }
+  }
+  
+  @media (max-width: 900px) {
+    .grid {
+      display: block;
+      margin-top: 20%;
+    }
+  }
+  
+  @media (max-width: 830px) {
+    .grid {
+      display: block;
+      margin-top: 30%;
+    }
+  }
+
+  /* media queryes */
+  @media (max-width: 600px) {
 
     .gridFiltersCharts {
       display: block;
+    }
+
+    .svgFilterChart {
+      display: flex;
+    }
+
+    .titulo-chart {
+      text-align: left;
     }
   
     .gridFiltersTable {
       display: block;
     }
   }
-
+  
   .diferencia {
     color: rgb(103 209 166);
   }
