--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.css
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.css
@@ -53,7 +53,7 @@
 }
 
 /* Tablas */
-.table-container {
+  .table-container {
     width: 100%;
     max-width: auto;
     margin: auto;
@@ -108,10 +108,6 @@
   .chart-line {
     width: 95%;
   }
-
-  .titulo-chart {
-    text-align: center;
-  }
   /* fin chart */
   
   /* Grids */
@@ -130,14 +126,40 @@
     grid-template-columns: 90% 10%;
   }
 
-  /* media queryes */
   @media (max-width: 1000px) {
     .grid {
       display: block;
+      margin-top: 10%;
     }
+  }
+  
+  @media (max-width: 900px) {
+    .grid {
+      display: block;
+      margin-top: 20%;
+    }
+  }
+  
+  @media (max-width: 830px) {
+    .grid {
+      display: block;
+      margin-top: 30%;
+    }
+  }
+
+  /* media queryes */
+  @media (max-width: 600px) {
 
     .gridFiltersCharts {
       display: block;
+    }
+
+    .svgFilterChart {
+      display: flex;
+    }
+
+    .titulo-chart {
+      text-align: left;
     }
   
     .gridFiltersTable {
