--- a/src/app/components/informes/informe-sku/informe-sku.component.html
+++ b/src/app/components/informes/informe-sku/informe-sku.component.html
@@ -1,12 +1,15 @@
 <!-- chart -->
 <div class="chart-container">
-  <div class="titulo-chart">
-    <div class="filtersCharts mb-2">
-      <h2>Total SKU marcas</h2>
+  <div class="gridFiltersCharts">
+    <div>
+      <h2 class="titulo-chart">Total SKU marcas</h2>
+    </div>
+
+    <div>
       <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal(template)" width="17" heigth="17"
         xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
         viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
-        aria-label="Illustration of a Funnel" class="filterSvgTable hoverSvgFilter ml-3">
+        aria-label="Illustration of a Funnel" class="svgFilterChart hoverSvgFilter">
         <g id="__id33_ssutzzo1g">
           <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
             style="fill: inherit"></path>
@@ -81,8 +84,7 @@
                 <div class="overflow-auto container-scroll">
                   <li *ngFor="let tipoprenda of tipoPrendaData">
                     <label class="control control--checkbox">
-                      <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}"
-                        name="{{tipoprenda.value}}"
+                      <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}" name="{{tipoprenda.value}}"
                         (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
                         id="{{tipoprenda.value}}" />
                       {{tipoprenda.text}}
@@ -118,7 +120,8 @@
                 <div class="overflow-auto container-scroll">
                   <li *ngFor="let composicion of composicionData">
                     <label class="control control--checkbox">
-                      <input class="composicion" type="checkbox" value="{{composicion.value}}" name="{{composicion.value}}"
+                      <input class="composicion" type="checkbox" value="{{composicion.value}}"
+                        name="{{composicion.value}}"
                         (change)="validateCheckFilter($event.target.checked, composicion, $event.target.className, $event.target)"
                         id="{{composicion.value}}" />
                       {{composicion.text}}
@@ -136,13 +139,13 @@
         </div>
       </ng-template>
     </div>
-    <div class="item-filters-top">
+    <div class="item-filters-top marginTitle">
       <div *ngFor="let filter of selectedFilter" class="content-filter-item">
-          <p class="item-filter">{{filter.item}}</p>
+        <p class="item-filter">{{filter.item}}</p>
       </div>
     </div>
   </div>
-  <div class="chart-line">
+  <div class="chart-line marginCharts">
     <canvas id="myChart" width="200px" height="120px"></canvas>
   </div>
 </div>
@@ -150,143 +153,151 @@
 
 <!-- tabla SKU -->
 <div class="table-container-sku">
-  <div class="filterTable">
-    <h2>Resumen mes SKU</h2>
-    <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
-      xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
-      viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
-      aria-label="Illustration of a Funnel" class="filterSvgTable hoverSvgFilter">
-      <g id="__id33_ssutzzo1g">
-        <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
-          style="fill: inherit"></path>
-      </g>
-    </svg>
-    <br>
-    <ng-template #template2>
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">Filtros</h4>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal2()">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <ul class="list-unstyled components">
+  <div class="gridFiltersTable">
+    <div>
+      <h2>Resumen mes SKU</h2>
+    </div>
 
-          <li class="active">
-            <a href="#filterMArk" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle menu-color">Marca
-            </a>
-            <ul class="collapse list-unstyled" id="filterMArk">
+    <div>
+      <svg xmlns="http://www.w3.org/2000/svg" (click)="openModal2(template2)" width="17" heigth="17"
+        xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid meet" version="1.0"
+        viewBox="0.0 0.0 180.0 210.0" zoomAndPan="magnify" style="fill:#358da3 " role="img"
+        aria-label="Illustration of a Funnel" class="hoverSvgFilter svgFilterChart">
+        <g id="__id33_ssutzzo1g">
+          <path d="m350 144.09h180v20l-70 90v100l-40-20v-80l-70-90v-20" transform="translate(-350 -144.09)"
+            style="fill: inherit"></path>
+        </g>
+      </svg>
+      <br>
+      <ng-template #template2>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Filtros</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="closeModal2()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <ul class="list-unstyled components">
 
-              <li *ngFor="let origin of originData">
-                <label class="control control--checkbox">
-                  <input class="marca2" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
-                    (change)="validateCheckFilter2($event.target.checked, origin, $event.target.className, $event.target)"
-                    id="{{origin.value}}" />
-                  {{origin.text}}
-                </label>
-              </li>
-            </ul>
-          </li>
+            <li class="active">
+              <a href="#filterMArk" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Marca
+              </a>
+              <ul class="collapse list-unstyled" id="filterMArk">
 
-          <li class="active mt-2">
-            <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
-              class="dropdown-toggle menu-color">Categoria
-            </a>
-            <ul class="collapse list-unstyled" id="filterCategory">
-              <li *ngFor="let category of categoryData">
-                <label class="control control--checkbox">
-                  <input class="categoria2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
-                    (change)="validateCheckFilter2($event.target.checked, category, $event.target.className, $event.target)"
-                    id="{{category.value}}" />
-                  {{category.text}}
-                </label>
-              </li>
-            </ul>
-          </li>
-
-          <li class="active mt-2">
-            <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
-              class="dropdown-toggle menu-color">Sub categoría
-            </a>
-            <ul class="collapse list-unstyled" id="filterSubCategory">
-              <li *ngFor="let subcategory of subCategoryData">
-                <label class="control control--checkbox">
-
-                  <input class="subCategoria2" type="checkbox" value="{{subcategory.value}}"
-                    name="{{subcategory.value}}"
-                    (change)="validateCheckFilter2($event.target.checked, subcategory, $event.target.className, $event.target)"
-                    id="{{subcategory.value}}" />
-                  {{subcategory.text}}
-                </label>
-              </li>
-            </ul>
-          </li>
-
-          <li class="active mt-2">
-            <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
-              class="dropdown-toggle menu-color">Tipo de prenda
-            </a>
-            <ul class="collapse list-unstyled" id="filterTipoPrenda">
-              <div class="overflow-auto container-scroll">
-                <li *ngFor="let tipoprenda of tipoPrendaData">
+                <li *ngFor="let origin of originData">
                   <label class="control control--checkbox">
-                    <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}"
-                      name="{{tipoprenda.value}}"
-                      (change)="validateCheckFilter2($event.target.checked, tipoprenda, $event.target.className, $event.target)"
-                      id="{{tipoprenda.value}}" />
-                    {{tipoprenda.text}}
+                    <input class="marca2" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                      (change)="validateCheckFilter2($event.target.checked, origin, $event.target.className, $event.target)"
+                      id="{{origin.value}}" />
+                    {{origin.text}}
                   </label>
                 </li>
-              </div>
-            </ul>
-          </li>
+              </ul>
+            </li>
 
-          <li class="active mt-2">
-            <a href="#filterColor" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle menu-color">Color
-            </a>
-            <ul class="collapse list-unstyled" id="filterColor">
-              <div class="overflow-auto container-scroll">
-                <li *ngFor="let color of colorData">
+            <li class="active mt-2">
+              <a href="#filterCategory" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Categoria
+              </a>
+              <ul class="collapse list-unstyled" id="filterCategory">
+                <li *ngFor="let category of categoryData">
                   <label class="control control--checkbox">
-                    <input class="color2" type="checkbox" value="{{color.value}}" name="{{color.value}}"
-                      (change)="validateCheckFilter2($event.target.checked, color, $event.target.className, $event.target)"
-                      id="{{color.value}}" />
-                    {{color.text}}
+                    <input class="categoria2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
+                      (change)="validateCheckFilter2($event.target.checked, category, $event.target.className, $event.target)"
+                      id="{{category.value}}" />
+                    {{category.text}}
                   </label>
                 </li>
-              </div>
-            </ul>
-          </li>
+              </ul>
+            </li>
 
-          <li class="active mt-2">
-            <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
-              class="dropdown-toggle menu-color">Composición
-            </a>
-            <ul class="collapse list-unstyled" id="filterComposicion">
-              <div class="overflow-auto container-scroll">
-                <li *ngFor="let composicion of composicionData">
+            <li class="active mt-2">
+              <a href="#filterSubCategory" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Sub categoría
+              </a>
+              <ul class="collapse list-unstyled" id="filterSubCategory">
+                <li *ngFor="let subcategory of subCategoryData">
                   <label class="control control--checkbox">
-                    <input class="composicion2" type="checkbox" value="{{composicion.value}}" name="{{composicion.value}}"
-                      (change)="validateCheckFilter2($event.target.checked, composicion, $event.target.className, $event.target)"
-                      id="{{composicion.value}}" />
-                    {{composicion.text}}
+
+                    <input class="subCategoria2" type="checkbox" value="{{subcategory.value}}"
+                      name="{{subcategory.value}}"
+                      (change)="validateCheckFilter2($event.target.checked, subcategory, $event.target.className, $event.target)"
+                      id="{{subcategory.value}}" />
+                    {{subcategory.text}}
                   </label>
                 </li>
-              </div>
-            </ul>
-          </li>
+              </ul>
+            </li>
 
-        </ul>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
-        <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
-      </div>
-    </ng-template>
+            <li class="active mt-2">
+              <a href="#filterTipoPrenda" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Tipo de prenda
+              </a>
+              <ul class="collapse list-unstyled" id="filterTipoPrenda">
+                <div class="overflow-auto container-scroll">
+                  <li *ngFor="let tipoprenda of tipoPrendaData">
+                    <label class="control control--checkbox">
+                      <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}"
+                        name="{{tipoprenda.value}}"
+                        (change)="validateCheckFilter2($event.target.checked, tipoprenda, $event.target.className, $event.target)"
+                        id="{{tipoprenda.value}}" />
+                      {{tipoprenda.text}}
+                    </label>
+                  </li>
+                </div>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Color
+              </a>
+              <ul class="collapse list-unstyled" id="filterColor">
+                <div class="overflow-auto container-scroll">
+                  <li *ngFor="let color of colorData">
+                    <label class="control control--checkbox">
+                      <input class="color2" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                        (change)="validateCheckFilter2($event.target.checked, color, $event.target.className, $event.target)"
+                        id="{{color.value}}" />
+                      {{color.text}}
+                    </label>
+                  </li>
+                </div>
+              </ul>
+            </li>
+
+            <li class="active mt-2">
+              <a href="#filterComposicion" data-toggle="collapse" aria-expanded="false"
+                class="dropdown-toggle menu-color">Composición
+              </a>
+              <ul class="collapse list-unstyled" id="filterComposicion">
+                <div class="overflow-auto container-scroll">
+                  <li *ngFor="let composicion of composicionData">
+                    <label class="control control--checkbox">
+                      <input class="composicion2" type="checkbox" value="{{composicion.value}}"
+                        name="{{composicion.value}}"
+                        (change)="validateCheckFilter2($event.target.checked, composicion, $event.target.className, $event.target)"
+                        id="{{composicion.value}}" />
+                      {{composicion.text}}
+                    </label>
+                  </li>
+                </div>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" (click)="clearFilters2()">Limpiar filtros</button>
+          <button type="button" class="btn btn-primary" (click)="closeModal2()">Cerrar</button>
+        </div>
+      </ng-template>
+    </div>
   </div>
-  <div class="item-filters-top">
+  <div class="item-filters-top marginTitle">
     <div *ngFor="let filter2 of selectedFilter2" class="content-filter-item">
-        <p class="item-filter">{{filter2.item}}</p>
+      <p class="item-filter">{{filter2.item}}</p>
     </div>
   </div>
   <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped row-border hover">
