--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -122,28 +122,28 @@
                     <img src="../../../../assets/productos/exterior.png" alt="Silueta Mujer" class="imgPrendas" title="Exterior">
                     <p>{{exterior}}</p>
                     <p>{{exteriorPorcentage}}%</p>
-                    <div style="background-color:{{colorExterior}}" class="colorx mb-3"><abbr title="{{colorExteriorPalabra}}">.</abbr></div>
+                    <div style="background-color:{{colorExterior}}" class="colorx mb-3"><abbr style=" cursor:pointer" title="{{colorExteriorPalabra}}">.</abbr></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Interior</h3>
                     <img src="../../../../assets/productos/interior.png" alt="Silueta Mujer" class="imgPrendas" title="Interior">
                     <p>{{interior}}</p>
                     <p>{{interiorPorcentage}}%</p>
-                    <div style="background-color:{{colorInterior}}" class="colorx mb-3"><abbr title="{{colorInteriorPalabra}}">.</abbr></div>
+                    <div style="background-color:{{colorInterior}}" class="colorx mb-3"><abbr style=" cursor:pointer" title="{{colorInteriorPalabra}}">.</abbr></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Calzado</h3>
                     <img src="../../../../assets/productos/calzado.png" alt="Silueta Mujer" class="imgPrendas" title="Calzado">
                     <p>{{calzado}}</p>
                     <p>{{calzadoPorcentage}}%</p>
-                    <div style="background-color:{{colorCalzado}}" class="colorx mb-3"><abbr title="{{colorCalzadoPalabra}}">.</abbr></div>
+                    <div style="background-color:{{colorCalzado}}" class="colorx mb-3"><abbr style=" cursor:pointer" title="{{colorCalzadoPalabra}}">.</abbr></div>
                 </div>
                 <div class="item2-2-img">
                     <h3>Accesorios</h3>
                     <img src="../../../../assets/productos/accesorios.png" alt="Silueta Mujer" class="imgPrendas" title="Accesorios">
                     <p>{{accesorios}}</p>
                     <p>{{accesoriosPorcentage}}%</p>
-                    <div style="background-color:{{colorAccesorios}}" class="colorx mb-3"><abbr title="{{colorAccesoriosPalabra}}">.</abbr></div>
+                    <div style="background-color:{{colorAccesorios}}" class="colorx mb-3"><abbr style=" cursor:pointer" title="{{colorAccesoriosPalabra}}">.</abbr></div>
                 </div>
             </div>
         </div>
